--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "express": "^4.17.1",
+    "mongoose": "^5.11.15",
     "socket.io": "^3.1.1"
   },
   "devDependencies": {},
