--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "moment": "^2.29.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
     "socket.io-client": "^3.1.1",
